Hide autoupdater from interface settings
It doesn´t work anyway.

--- a/Source/Android/app/src/main/res/values/strings.xml
+++ b/Source/Android/app/src/main/res/values/strings.xml
@@ -185,7 +185,7 @@ Without the correct bios file, the app may crash due to a bug that I can not fix
     <string name="analytics_new_id">Generate a New Statistics Identity</string>
     <string name="analytics_new_id_confirmation">Are you sure you want to generate a new statistics identity?</string>
     <string name="gametdb_thanks">Special thanks to Weihuoya + Dolphin Team for getting this emulator to where it is today.</string>
-    <string name="dev_thanks">Dolphin |MMJR2| made by bankaimaster999 and sspacelynx.</string>
+    <string name="dev_thanks">Dolphin |MMJR2| made by bankaimaster999, sspacelynx and Lumince.</string>
 
     <!-- SerialPort1 Subsetting Fragment -->
     <string name="serialport1_submenu">Serial Port 1</string>
