--- a/Source/Android/app/src/main/res/values/strings.xml
+++ b/Source/Android/app/src/main/res/values/strings.xml
@@ -354,7 +354,7 @@ Without the correct bios file, the app may crash due to a bug that I can not fix
     <string name="aspect_ratio_description">Select what aspect ratio to use when rendering</string>
     <string name="shader_compilation_mode">Shader Compilation Mode</string>
     <string name="fast_disc_speed">Fast Disc Speed</string>
-    <string name="fast_disc_speed_description">Accelerates the emulated disc speed, reducing loading times. Some games that rely on accurate disc speed emulation could become instable, fail to read data and crash.</string>
+    <string name="fast_disc_speed_description">Accelerates the emulated disc speed, reducing loading times. Some games that rely on accurate disc speed emulation could become unstable, fail to read data and crash.</string>
     <string name="wait_for_shaders">Compile Shaders Before Starting</string>
     <string name="wait_for_shaders_description">This causes a delay when launching games, but will reduce stuttering early on.</string>
 
